<resources>
    <string name="app_name">dangerzone</string>

    // INFORMATION AND INSTRUCTIONS
    <string name="acknowledgments">Acknowledgments</string>
    <string name="sources">
        &#160;- Volcano image and dinosaurs from pixabay.com\n
        - Tom Cruise from google and Tom Cruise’s mom\n
        - Thank you to Kenny Loggins for being a hero\n
        - Dinosaur sounds from freesound.org\n
        - Music from freemidi.org\n
        - Audio conversion from aconvert.com\n
        - PNG conversion from lunapic.com\n
        - Android icons from material.io\n
        - Notification guide from ptyagi techLog blog\n
        - Pedometer example from Google open source\n
        - Awesome app by Michelle Lee and Bri Garbo.</string>
    <string name="instructions">LAUNCH! THAT! APP!\n
\nSo you’ve decided to step into the DANGER ZONE?! You’re so brave. Now that you’ve set your name, it’s time to understand the DANGER.
    You can walk at any time by selecting the WALK option on the main screen. Choose how long you’d like to walk, and we’ll load a DANGER ZONE SCENARIO for you to escape from — or try! \n
\nDANGER ZONE can also prompt you with a sudden DANGER ZONE SCENARIO throughout the day! To enable this option, select the GEAR on the main page, where you can say yes to the test. \n
\nOnce running, you’ll have the displayed amount of time to ESCAPE FROM THE DANGER ZONE! The twists and turns you take will vary with each scenario so keep up the pace or end up on your face.
        Track your steps and progress, earn titles and achievements, compete against your friends, AND MORE! All while avoiding spending too much time sitting at your couch or desk!\n
\nCan you escape… the DANGER ZONE??</string>
    <string name="information">HOW TO PLAY:</string>
    <string name="ok_label">OK</string>
    <string name="ack_title">Acknowledgments</string>
    <string name="developer_title">Developer Notes</string>
    <string name="developer_notes">
        <b>Design Considerations:</b>\n
        - The number of steps that is required to complete a walk is currently likely on the lower end of things making
        the game a bit easier for our target audience which is people living a sedentary lifestyle. In the future we might
        consider adding difficulty levels to make it more interesting as players advance.\n
        - Considered a battery savery mode for the actual walk activity but instead we decided to let the app continue to
        run even if the phone had the lock button pressed. This is because this is a way to manage the battery life. Additionally
        since the game does not require the player to constantly monitor the screen during the walk, it would make more sense that
        they could walk and have it on in the background. The music was set to stop if the app lost focus since it would be
        obnoxious if it kept going.\n
        - We opted for no action bar since this was a hybrid game/fitness app but we wanted to make it seem more
        "fun" instead of having it just a utility pedometer app. The main menu would be the launch point for all the other
        activities in the app. The inspiration for this was Hearthstone where you never get more than one back button
        press away from the main menu. Currently all of our activities are like this except one which is two back button
        presses away. For real app deployment we would look into making this look more aesthetically pleasing and making
        this the optimal user experience.\n
        - We thought about adding a countdown before the beginning of the walk. We opted not to because when people
        hit the walk button they generally expect the activity to start. From being avid Pokemon Go players, we have noticed
        that during the countdown before gym battles, most people are already tapping their phones and in general impatient
        for the event to begin.\n
        - We decided not to add moving images to the app as we did not want people to be staring at
        the screen while they were out for a walk and risk getting injured. This app is first and
        foremost a fitness app that is trying to be more interesting than a pedometer, so it is not
        a game that you have to constantly look at the screen for. Eventually we would want to add some in-walk bonuses
        but those would be alerted somehow so the player would not have to constantly look at the screen.\n
        - We did not implement app wide volume controls as we felt most users manage sound at a global
        level on their devices for sensitive situations. An example of such a situation would be at the movies
        or during a meeting. Most people would turn off their phones completely, put them on silent, etc.\n\n

        <b>Future Improvements:</b>\n
        The following is a list of improvements that we would want to implement for an app for full release later on.\n
        - Add more levels as the game is currently capped at level 5.
        - Add more scenarios in future releases so that they could be randomly selected by the app and would
        be more interesting for the user.\n
        - Add more achievements to the game to keep the interest level in the game higher. Things like achievements
        for walking a certain number of times, doing enough specific scenarios, doing them right when the notification
        appears, etc.\n
        - Add location sharing and a two player mode with friends nearby so that walkers can meet up and walk together. Again
        aiming to keep engagement levels high.\n
        - Improve the graphic design and sounds to look more polished and interesting.

    </string>

    // MAIN FRAGMENT CONTROLS
    <string name="walk_button">Walk</string>
    <string name="settings_button">Settings</string>
    <string name="user_profile_button">User Profile</string>
    <string name="instructions_button">Instructions</string>

    // SETTINGS XML
    <string name="notifications_on_off">Notifications</string>
    <string name="current_settings">Current interval is set to:&#160;</string>
    <string name="notification_interval">Interval</string>
    <string name="notification_minutes">Minutes</string>

    // USER XML
    <string name="user_default">USER NAME</string>
    <string name="user_level">LEVEL</string>
    <string name="title_default">\"Fresh Meat\" </string>
    <string name="minutes_walked">Minutes Walked (min)</string>
    <string name="distance_walked">Distance Walked (km)</string>
    <string name="number_of_achievements"># of Achievements</string>
    <string name="min_default">0 min</string>
    <string name="distance_default">0 km</string>
    <string name="number_of_titles"># of Titles</string>
    <string name="titles_default">None</string>
    <string name="achievements_default">None</string>
    <string name="friends">Friends</string>
    <string name="title_change">Title changed!</string>
    <string name="title_information_blurb">Select a title from the list to select a new title.</string>
    <string name="steps_walked">Steps walked (steps)</string>
    <string name="steps_default">0 steps</string>
    <string name="new_title">New Title Earned!</string>
    <string name="new_title_blurb">Ahh Fresh Meat! We have another one trying to escape what lurks beneath the seat&#8230;how will you fare?</string>
    <string name="new_achievement">New Achievement Earned!</string>
    <string name="new_achievement_blurb">&#9833;And then a hero comes along&#8230;you\'re fearless aren\'t you? Some might even call you a Danger Seeker!</string>

    // INITIAL STARTUP DIALOG
    <string name="welcome_title">You are now entering the danger zone&#8230;</string>
    <string name="enter_name">What should we call you?</string>
    <string name="enter">Enter</string>
    <string name="go">Go</string>
    <string name="username_hint">Enter username</string>

    // ACTIVITY TITLES
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_simplepedometer">SimplePedometerActivity</string>

    // WALK INTRO
    <string name="one_min">1 min</string>
    <string name="three_min">3 min</string>
    <string name="five_min">5 min</string>
    <string name="walk">Walk!</string>
    <string name="time_selection">SELECT WALK TIME: </string>
    <string name="walk_title">WALK FOR YOUR LIFE!</string>
    <string name="walk_scenario">You’re sitting at your desk, working, when suddenly the room begins to rumble. <i>Thump. <b>Thump.</b></i>
        You turn around as the vibrations approach, growing louder, when a <i>roar</i> cuts through the office – and as the tyrannosaurus
        lifts its scaley head to peer at you with beady eyes, you realize you need to <i>move.</i> \n\n
        <i>Better start walking.</i></string>

    // END WALK
    <string name="victory_title">RESULTS</string>
    <string name="experience_earned">Walk Experience Summary:</string>
    <string name="stat_summary">Walk Statistics Summary:</string>
    <string name="main_menu_button">Main Menu</string>
    <string name="to_next_level">xp to level&#160;</string>
    <string name="dinomite">Dino-mite!</string>
    <string name="failure_text">YOU GOT EATEN!</string>
    <string name="failure_text2">Better walk faster next time…</string>
    <string name="success_text">Success!</string>
    <string name="dino_title_blurb">Pff that oversized chicken had nothing on you. Dino-mite!</string>
    <string name="dino_wrangler">Dino Wrangler</string>
    <string name="dino_achievement_blurb">Humans are friends, not food silly dinosaur. A tried and true Dino Wrangler you are!</string>

    // WALK ACTIVITY
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="timer_default">0:00</string>

    // FRIENDS LIST
    <string name="add">Add Friend</string>
    <string name="delete">Remove Friend</string>
    <string name="userid">My Friend Code:&#160;</string>
    <string name="edit_hint">Enter friend code</string>
    <string name="submit">Submit</string>
    <string name="friends_list_title">FRIENDS LIST</string>
    <string name="friends_remove_instructions">Click a friend to remove them from the friends list. Friends can be readded.</string>

    // MAIN ACTIVITY
    <string name="new_title_earned">New title earned!</string>

    // NOTIFICATION STRINGS
    <string name="channel_name">fcm_default_channel</string>
    <string name="channel_description">fcm_default_channel</string>

</resources>
