<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EndWalk">

    <TextView
        android:id="@+id/victory_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/endwalk_padding"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|italic"
        android:textSize="@dimen/profile_username_text"
        android:text="@string/victory_title" />

    <TextView
        android:id="@+id/progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/victory_text"
        android:layout_marginTop="@dimen/endwalk_padding"
        android:textStyle="bold"
        android:textSize="@dimen/profile_username_title"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/victory_text"
        android:layout_marginTop="@dimen/endwalk_padding"
        android:max="100"
        android:progress="0"
        android:rotation="-90"
        android:progressDrawable="@drawable/circular" />

    <TextView
        android:id="@+id/experience_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/experience_summary"
        android:layout_below="@id/progressBar"
        android:textStyle="italic"
        android:text="@string/experience_earned" />

    <ScrollView
        android:id="@+id/experience_summary"
        android:layout_width="@dimen/list_width"
        android:layout_height="@dimen/list_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/experience_text"
        android:background="@drawable/stroke">
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ListView>
    </ScrollView>

    <TextView
        android:id="@+id/statistics_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thin_padding"
        android:layout_alignStart="@id/stat_summary"
        android:layout_below="@id/experience_summary"
        android:textStyle="italic"
        android:text="@string/stat_summary" />

    <ScrollView
        android:id="@+id/stat_summary"
        android:layout_width="@dimen/list_width"
        android:layout_height="@dimen/list_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/statistics_text"
        android:background="@drawable/stroke">
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ListView>
    </ScrollView>

    <Button
        android:id="@+id/walk"
        android:layout_width="@dimen/time_button_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/stat_summary"
        android:layout_marginTop="@dimen/endwalk_padding"
        android:textColor="@color/white"
        android:text="@string/main_menu_button"
        android:background="@drawable/button"/>
</RelativeLayout>